apps/api/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  annotations:
    external-dns.typie.io/enabled: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
  hostnames:
    - api.typie.co
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: api
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
