apps/api/prod/cilium-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: api-l7-proxy
spec:
  endpointSelector:
    matchLabels:
      app: api
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: website
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
          rules:
            http:
              - {}
